--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <script src=C:\Users\elektro.szczepanski\Desktop\28-js-warunki\main.js> </script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
